# TouchdownOS

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md
apps/: CMakeLists.txt  README.md
apps/manifests/: example.json  info.json  settings.json
apps/system/: CMakeLists.txt
cmake/: arm-pi-toolchain.cmake
config/dts/: touchdown-overlay.dts
config/systemd/: touchdown-app@.service  touchdown-input.service  touchdown-power.service  touchdown-shell.service
config/touchdown/: shell.conf
docs/: app-framework-implementation.md  app-framework.md  architecture.md  building.md  development.md
examples/python/: example_app.py
include/: lv_conf.h
include/touchdown/app/: app.hpp  app_registry.hpp  manifest.hpp
include/touchdown/apps/: settings_app.hpp  system_info_app.hpp
include/touchdown/core/: config.hpp  logger.hpp  types.hpp  utils.hpp
include/touchdown/drivers/: button_driver.hpp  display_driver.hpp  touch_driver.hpp
include/touchdown/services/: app_manager.hpp  dbus_interface.hpp  input_service.hpp  power_service.hpp
include/touchdown/shell/: app_launcher.hpp  circular_layout.hpp  home_screen.hpp  shell.hpp  theme_engine.hpp
scripts/: build.sh  install.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cpp  app_registry.cpp  manifest.cpp
src/apps/: CMakeLists.txt  settings_app.cpp  system_info_app.cpp
src/bindings/: CMakeLists.txt  python_api.cpp
src/core/: CMakeLists.txt  config.cpp  logger.cpp  utils.cpp
src/drivers/: CMakeLists.txt  button_driver.cpp  display_driver.cpp  touch_driver.cpp
src/services/: CMakeLists.txt  app_manager.cpp  dbus_interface.cpp  input_service.cpp  input_service_main.cpp  power_service.cpp  power_service_main.cpp
src/shell/: CMakeLists.txt  app_launcher.cpp  circular_layout.cpp  home_screen.cpp  main.cpp  shell.cpp  theme_engine.cpp
